--- a/views/includes/head.pug
+++ b/views/includes/head.pug
@@ -1,5 +1,5 @@
 head
   title= `Ben Gaubert, REALTOR`
   link(rel='stylesheet', href="../styles/bootstrap/dist/css/bootstrap.min.css")
+  link(rel="stylesheet" href="../styles/css/app.css")  
   link(rel="stylesheet" href="../styles/css/styles.css")
-  link(rel="stylesheet" type="text/scss" href="../styles/scss/custom.scss")
