--- a/public/styles/scss/base/_base.scss
+++ b/public/styles/scss/base/_base.scss
@@ -6,8 +6,10 @@
   @import '../module/components/icon-components';
   // Sections
   @import '../module/navigation-section';
+  @import '../module/title-section';
   @import '../module/landing-section';
   @import '../module/content-section';
+  @import '../module/accordion-custom';
   @import '../module/portfolio-section';
   @import '../module/services-section';
   @import '../module/client-section';
