--- a/public/styles/scss/module/_socket.scss
+++ b/public/styles/scss/module/_socket.scss
@@ -13,13 +13,13 @@ footer{
     color: white;
   }
 
-  svg.svg-inline--fa{
-    font-size: 1.6rem;
-    margin: 1.2rem .5rem 0 0;
-      &:hover{
-        color: $primary-green !important;
-      }
-  } 
+  // svg.svg-inline--fa{
+  //   font-size: 1.6rem;
+  //   margin: 1.2rem .5rem 0 0;
+  //     &:hover{
+  //       color: $primary-green !important;
+  //     }
+  // } 
 }
 hr.socket{
   width: 97%;
