--- a/public/styles/scss/module/components/_icon-components.scss
+++ b/public/styles/scss/module/components/_icon-components.scss
@@ -1,3 +1,4 @@
+
 // ============ ICONS ============ //
 .feature{
   svg.svg-inline--fa {
@@ -11,4 +12,17 @@
   p {
     font-size: 1.1rem;
   }
+}
+// Landing Page Icons
+.logo{
+  padding: 10px;
+}
+.divider{
+  color: $primary-green;
+  margin-left: 8px;
+  margin-right: 8px;
+}
+.title-icon{
+  margin-top: 3px;
+  margin-right: 10px;
 }
