--- a/public/styles/scss/base/_button-style-extends.scss
+++ b/public/styles/scss/base/_button-style-extends.scss
@@ -1,11 +1,13 @@
 // buttons
 %btn-style-override{
   letter-spacing: 0.1em;
-  line-height: 45px;
   color: #000;
-  border: 4px solid #FFF;
-  box-shadow: 0px 1px 10px 0px rgb(63, 63, 63);
+  border: 4px solid $stone-grey;
+  -webkit-box-shadow: 10px 10px 24px -1px rgba(166,166,166,1);
+  -moz-box-shadow: 10px 10px 24px -1px rgba(166,166,166,1);
+  box-shadow: 10px 10px 24px -1px rgba(166,166,166,1);
   background-color: #fff;
+  margin: 1em;
   overflow: hidden;
   position: relative;
   transition: all 0.5s ease-in-out;
@@ -61,13 +63,11 @@
 }
 
 %btn-secondary-style{
-  border-color: $primary-green;
-  background-color: $primary-green;
+  background-color: white;
   border-width: medium;
   border-radius: 0;
-  color: white;
-  padding: .6rem 1.2rem;
-  font-size: 1.2rem;
+  // padding: .6rem 1.2rem;
+  // font-size: 1.2rem;
   text-transform: uppercase;
   margin: 1em;
 }
